page tibiana atualizado

--- a/tibiatrade/TradeTibiano.html
+++ b/tibiatrade/TradeTibiano.html
@@ -17,21 +17,21 @@
 <header>
     <div class="conteiner">
         <Img class="logo" src="./imgtibia/logotibia-removebg-preview (1).png"></Img>
-    <h1>Tibiano Page </h1>
+    <h1>Page Tibiana </h1>
     <nav>
         <ul>
             <li>
-                <a href="">Sobre o Jogo</a>
+                <a href="#sobre">Sobre o Jogo</a>
             </li>
             <li>
-                <a href="">Comunidade Tibiana</a>
+                <a href="#contato">Comunidade Tibiana</a>
             </li>
         </ul>
     </nav>
     </div>
 
 </header>
-<section>
+<section id="sobre">
     <div class="conteiner">
         <img class="tibiawp" src="./imgtibia/knight2.jpg" alt="tibia Ilustração" />
         <div>
@@ -125,10 +125,10 @@
                 <div>
                 <H6>Fale Conosco</H6>
                 <form>
-                    <input type="text" placeholder="Seu Nome"/>
-                    <input type="text" placeholder="Seu E-mail"/>
-                    <input type="text" placeholder="Seu NickGame"/>
-                    <textarea placeholder="Seu Comentario"></textarea>
+                    <input type="text" placeholder="Seu Nome" required/>
+                    <input type="text" placeholder="Seu E-mail" required/>
+                    <input type="text" placeholder="Seu NickGame (Opcional)" />
+                    <textarea placeholder="Seu Comentario" required></textarea>
                     <button>Enviar</button>
 
                 </form>
@@ -137,11 +137,11 @@
                     <H6>Saiba Mais Sobre a Comunidade</H6>
                     <ul>
                         <li>
-                            <a href="#" title="Tibia Wiki"> Tibia Wiki</a>
+                            <a href="https://www.tibiawiki.com.br/" title="Tibia Wiki"> Tibia Wiki</a>
                             <img src="./imgtibia/R.gif" title="Tibiawiki"/>
                         </li>
                         <li class="a1" >
-                            <a  href="#" title="Tibia Br">Tibia BR</a>
+                            <a  href="https://www.tibiabr.com/" title="Tibia Br">Tibia BR</a>
                             <img src="./imgtibia/Morga1.gif" title="TibiaBR"/>
                         </li>
 
@@ -155,5 +155,12 @@
 
 
     </section>
+    <footer>
+        <div>
+            <P>
+                &copy; Page Tibiana - Todos Direitos Reservados - 2023
+            </P>
+        </div>
+    </footer>
 </body>
 </html>
