--- a/marque/marque.html
+++ b/marque/marque.html
@@ -12,7 +12,7 @@
 <body>
     <section class="sectcarosel" >
     <header>
-      <h1><strong>Marque</strong> -<smmal>Soluções e Serviços</smmal> </h1>
+      <h1><img src="../marque/imgmarque/marquelogo.png" alt=""></h1>
       <div class="container">
         <div class="row">
           <div class="col">
