--- a/aula10/event.html
+++ b/aula10/event.html
@@ -28,7 +28,7 @@
        a.addEventListener('mouseout', saiu )
     function clicar() {
             
-            a.innerText = "bucetudo"
+            a.innerText = "oi"
             a.style.background = "black"
                }
         function entrar()     {
